//! æ’ä»¶åè®®å¤„ç†å™¨ / Plugin protocol handler
//!
//! æ”¯æŒ Protobuf åè®®çš„æœåŠ¡ç«¯å®ç° / Server-side Protobuf protocol support

use anyhow::Result;
use prost::Message;
use tokio::io::{AsyncReadExt, AsyncWriteExt};
use tokio::net::UnixStream;
use tracing::{debug, info};

use v::plugin::protocol::{
    negotiate_protocol, EventMessage, EventResponse, HandshakeRequest, HandshakeResponse,
    ProtocolFormat,
};

/// åè®®å¤„ç†ä¼šè¯ / Protocol handler session
pub struct ProtocolSession {
    stream: UnixStream,
    protocol: ProtocolFormat,
    plugin_name: Option<String>,
}

impl ProtocolSession {
    /// åˆ›å»ºæ–°ä¼šè¯ï¼ˆé»˜è®¤ Protobufï¼‰/ Create new session (default Protobuf)
    pub fn new(stream: UnixStream) -> Self {
        let protocol = ProtocolFormat::Protobuf;
        Self {
            stream,
            protocol,
            plugin_name: None,
        }
    }

    /// å¤„ç†æ¡æ‰‹ / Handle handshake
    pub async fn handle_handshake(&mut self) -> Result<HandshakeRequest> {
        // è¯»å–æ¡æ‰‹æ¶ˆæ¯ / Read handshake message
        let len = self.stream.read_u32().await?;
        let mut buffer = vec![0u8; len as usize];
        self.stream.read_exact(&mut buffer).await?;

        // ä½¿ç”¨ prost è§£ç æ¡æ‰‹è¯·æ±‚ / Decode handshake request using prost
        let request = HandshakeRequest::decode(buffer.as_slice())?;
        self.plugin_name = Some(request.name.clone());

        info!(
            "ğŸ¤ Plugin handshake: {} v{} (priority: {}, protocol: {}, capabilities: {:?})",
            request.name, request.version, request.priority, request.protocol, request.capabilities
        );

        // åè®®åå•† / Protocol negotiation
        let negotiated = negotiate_protocol(&request.protocol);
        if negotiated != self.protocol {
            info!(
                "ğŸ”„ Protocol negotiated: {:?} -> {:?}",
                self.protocol, negotiated
            );
            self.protocol = negotiated;
        }

        // å‘é€æ¡æ‰‹å“åº” / Send handshake response
        let response = HandshakeResponse {
            status: "ok".to_string(),
            message: String::new(),
            config: String::new(),
            protocol: format!("{:?}", self.protocol).to_lowercase(),
        };

        // ä½¿ç”¨ prost ç¼–ç æ¡æ‰‹å“åº” / Encode handshake response using prost
        let resp_bytes = response.encode_to_vec();
        self.stream.write_u32(resp_bytes.len() as u32).await?;
        self.stream.write_all(&resp_bytes).await?;
        self.stream.flush().await?;

        Ok(request)
    }

    /// å‘é€äº‹ä»¶ / Send event
    pub async fn send_event(
        &mut self,
        event_type: &str,
        payload: Vec<u8>,
    ) -> Result<EventResponse> {
        // æ„å»ºäº‹ä»¶æ¶ˆæ¯ / Build event message
        let event = EventMessage {
            event_type: event_type.to_string(),
            payload,
            timestamp: chrono::Utc::now().timestamp_millis(),
            trace_id: String::new(),
        };

        // ä½¿ç”¨ prost ç¼–ç äº‹ä»¶ / Encode event using prost
        let bytes = event.encode_to_vec();

        // å‘é€æ¶ˆæ¯ / Send message
        self.stream.write_u32(bytes.len() as u32).await?;
        self.stream.write_all(&bytes).await?;
        self.stream.flush().await?;

        debug!(
            "[plugin:{}] sent event: {} (protocol: {:?}, size: {} bytes)",
            self.plugin_name.as_deref().unwrap_or("unknown"),
            event_type,
            self.protocol,
            bytes.len()
        );

        // è¯»å–å“åº” / Read response
        let resp_len = self.stream.read_u32().await?;
        let mut resp_buf = vec![0u8; resp_len as usize];
        self.stream.read_exact(&mut resp_buf).await?;

        // ä½¿ç”¨ prost è§£ç å“åº” / Decode response using prost
        let response = EventResponse::decode(resp_buf.as_slice())?;

        debug!(
            "[plugin:{}] received response: status={}, flow={} (size: {} bytes)",
            self.plugin_name.as_deref().unwrap_or("unknown"),
            response.status,
            response.flow,
            resp_buf.len()
        );

        Ok(response)
    }

    /// è·å–æ’ä»¶åç§° / Get plugin name
    pub fn plugin_name(&self) -> Option<&str> {
        self.plugin_name.as_deref()
    }

    /// è·å–å½“å‰åè®® / Get current protocol
    pub fn protocol(&self) -> ProtocolFormat {
        self.protocol
    }

    /// åˆ†ç¦» stream / Split stream
    pub fn into_stream(self) -> UnixStream {
        self.stream
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    #[tokio::test]
    async fn test_protocol_negotiation() {
        let protocol = negotiate_protocol("protobuf");
        assert_eq!(protocol, ProtocolFormat::Protobuf);
    }
}
