//! æ’ä»¶å®¢æˆ·ç«¯ - Protobuf åè®® / Plugin client - Protobuf protocol

use anyhow::Result;
use prost::Message;
use tokio::io::{AsyncReadExt, AsyncWriteExt};
use tokio::net::UnixStream;
use tokio::sync::watch;
use tokio::time::{sleep, Duration};
use tracing::{debug, error, info, warn};

use super::protocol::{
    negotiate_protocol, EventMessage, EventResponse, HandshakeRequest, HandshakeResponse,
    ProtocolFormat,
};

/// æ’ä»¶äº‹ä»¶å¤„ç†æ¥å£ / Plugin event handler interface
pub trait PluginHandler {
    /// æ’ä»¶åç§° / Plugin name
    fn name(&self) -> &'static str;
    /// æ’ä»¶ç‰ˆæœ¬ / Plugin version
    fn version(&self) -> &'static str;
    /// èƒ½åŠ›å£°æ˜ï¼ˆå¿…é¡»å®ç°ï¼‰/ Capability declaration (required)
    fn capabilities(&self) -> Vec<String>;
    /// æ’ä»¶ä¼˜å…ˆçº§ / Plugin priority
    fn priority(&self) -> i32 {
        0
    }
    /// åè®®æ ¼å¼ï¼ˆä»…æ”¯æŒ Protobufï¼‰/ Protocol format (Protobuf only)
    fn protocol(&self) -> ProtocolFormat {
        ProtocolFormat::Protobuf
    }
    /// åº”ç”¨é…ç½® / Apply configuration
    fn config(&mut self, _cfg: &str) -> Result<()> {
        Ok(())
    }
    /// å¤„ç†äº‹ä»¶å¹¶è¿”å›å“åº” / Handle event and return response
    fn on_event(&mut self, event: &EventMessage) -> Result<EventResponse>;
}

/// æ’ä»¶å®¢æˆ·ç«¯ï¼ˆProtobuf åè®®ï¼‰/ Plugin client (Protobuf protocol)
pub struct PluginClient<H: PluginHandler> {
    socket_path: String,
    handler: H,
    reconnect_backoff: (u64, u64),      // (initial_ms, max_ms)
    ident: String,                      // æ’ä»¶æ ‡è¯†ï¼ˆåç§°-ç‰ˆæœ¬ï¼‰/ Plugin identifier (name-version)
    shutdown_tx: watch::Sender<bool>,   // å…³é—­ä¿¡å·å‘é€å™¨ / Shutdown signal sender
    shutdown_rx: watch::Receiver<bool>, // å…³é—­ä¿¡å·æ¥æ”¶å™¨ / Shutdown signal receiver
    protocol: ProtocolFormat,           // å½“å‰ä½¿ç”¨çš„åè®® / Current protocol
}

impl<H: PluginHandler> PluginClient<H> {
    /// åˆ›å»ºå®¢æˆ·ç«¯ / Create client
    pub fn new(socket_path: impl Into<String>, handler: H) -> Self {
        let socket = socket_path.into();
        let ident = format!("{}-{}", handler.name(), handler.version());
        let protocol = handler.protocol();

        info!(
            "[plugin:{}] init client, socket={}, protocol={:?}",
            ident, socket, protocol
        );

        let (tx, rx) = watch::channel(false);
        Self {
            socket_path: socket,
            handler,
            reconnect_backoff: (500, 5000),
            ident,
            shutdown_tx: tx,
            shutdown_rx: rx,
            protocol,
        }
    }

    /// è§¦å‘å…³é—­ä¿¡å· / Trigger shutdown signal
    pub fn shutdown(&self) {
        let _ = self.shutdown_tx.send(true);
    }

    /// è¿è¡Œå¹¶ç›‘å¬ Ctrl-C ä»¥é€€å‡º / Run and listen Ctrl-C to exit
    pub async fn run_forever_with_ctrlc(&mut self) -> Result<()> {
        tokio::select! {
            res = self.run_forever() => res,
            _ = tokio::signal::ctrl_c() => {
                info!("[plugin:{}] ctrl-c received, shutting down", self.ident);
                self.shutdown();
                Ok(())
            }
        }
    }

    /// æ°¸ä¹…è¿è¡Œï¼Œè‡ªåŠ¨é‡è¿ / Run forever with auto reconnect
    pub async fn run_forever(&mut self) -> Result<()> {
        let mut backoff = self.reconnect_backoff.0;
        loop {
            // å¦‚æœæ”¶åˆ°å…³é—­ä¿¡å·åˆ™é€€å‡º / Exit on shutdown signal
            if *self.shutdown_rx.borrow() {
                info!("[plugin:{}] shutdown flag set, exiting", self.ident);
                break;
            }
            match self.run_once().await {
                Ok(_) => {
                    info!("[plugin:{}] session finished, reconnecting", self.ident);
                    backoff = self.reconnect_backoff.0;
                }
                Err(e) => {
                    warn!("[plugin:{}] session error: {}", self.ident, e);
                    tokio::select! {
                        _ = sleep(Duration::from_millis(backoff)) => {},
                        _ = self.shutdown_rx.changed() => {
                            if *self.shutdown_rx.borrow() { break; }
                        }
                    }
                    backoff = std::cmp::min(backoff * 2, self.reconnect_backoff.1);
                }
            }
        }
        Ok(())
    }

    /// å•æ¬¡ä¼šè¯ / Single session
    async fn run_once(&mut self) -> Result<()> {
        self.wait_for_socket().await?;
        info!(
            "[plugin:{}] connecting socket: {}",
            self.ident, self.socket_path
        );
        let mut stream = self.connect_with_retry().await?;
        info!("[plugin:{}] connected", self.ident);
        self.send_handshake(&mut stream).await?;
        self.listen_loop(&mut stream).await
    }

    /// ç­‰å¾… socket æ–‡ä»¶ / Wait for socket file
    async fn wait_for_socket(&mut self) -> Result<()> {
        let mut retries = 120u32;
        while !std::path::Path::new(&self.socket_path).exists() {
            if retries == 0 {
                error!(
                    "[plugin:{}] socket not found: {}",
                    self.ident, self.socket_path
                );
                return Err(anyhow::anyhow!("socket not found"));
            }
            debug!(
                "[plugin:{}] waiting for socket: {} (retries: {})",
                self.ident, self.socket_path, retries
            );
            retries -= 1;
            tokio::select! {
                _ = sleep(Duration::from_millis(500)) => {},
                _ = self.shutdown_rx.changed() => {
                    if *self.shutdown_rx.borrow() {
                        warn!("[plugin:{}] shutdown during wait_for_socket", self.ident);
                        return Err(anyhow::anyhow!("shutdown"));
                    }
                }
            }
        }
        Ok(())
    }

    /// å¸¦é‡è¯•çš„è¿æ¥ï¼ˆå¤„ç†è¿æ¥æ‹’ç»ï¼‰/ Connect with retry (handle ECONNREFUSED)
    async fn connect_with_retry(&mut self) -> Result<UnixStream> {
        use std::io::ErrorKind;
        let mut rx = self.shutdown_rx.clone();
        let mut backoff = self.reconnect_backoff.0.min(500);
        loop {
            tokio::select! {
                res = UnixStream::connect(&self.socket_path) => {
                    match res {
                        Ok(stream) => return Ok(stream),
                        Err(e) => {
                            if e.kind() == ErrorKind::ConnectionRefused {
                                warn!("[plugin:{}] connect refused, retrying", self.ident);
                                tokio::select! {
                                    _ = sleep(Duration::from_millis(backoff)) => {},
                                    _ = rx.changed() => {
                                        if *rx.borrow() { return Err(anyhow::anyhow!("shutdown")); }
                                    }
                                }
                                backoff = std::cmp::min(backoff * 2, self.reconnect_backoff.1);
                                continue;
                            } else {
                                return Err(e.into());
                            }
                        }
                    }
                }
                _ = rx.changed() => {
                    if *rx.borrow() { return Err(anyhow::anyhow!("shutdown")); }
                }
            }
        }
    }

    /// å‘é€æ¡æ‰‹ä¿¡æ¯ / Send handshake info
    async fn send_handshake(&mut self, stream: &mut UnixStream) -> Result<()> {
        let handshake = HandshakeRequest {
            name: self.handler.name().to_string(),
            version: self.handler.version().to_string(),
            capabilities: self.handler.capabilities(),
            priority: self.handler.priority(),
            protocol: format!("{:?}", self.protocol).to_lowercase(),
        };

        // ä½¿ç”¨ prost ç¼–ç æ¡æ‰‹æ¶ˆæ¯ / Encode handshake using prost
        let bytes = handshake.encode_to_vec();

        // å‘é€æ¶ˆæ¯ / Send message
        stream.write_u32(bytes.len() as u32).await?;
        stream.write_all(&bytes).await?;
        stream.flush().await?;

        // æ‰“å°æ’ä»¶ä¿¡æ¯ / Print plugin info
        info!("");
        info!("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
        info!("ğŸ”Œ Plugin Information / æ’ä»¶ä¿¡æ¯");
        info!("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
        info!("  Plugin ID      : {}", handshake.name);
        info!("  Version        : {}", handshake.version);
        info!("  Priority       : {}", handshake.priority);
        info!("  Protocol       : {:?}", self.protocol);
        info!("  Capabilities   : [{}]", handshake.capabilities.join(", "));
        info!("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
        info!("");

        // è¯»å–å“åº” / Read response
        let resp_len = stream.read_u32().await?;
        let mut resp = vec![0u8; resp_len as usize];
        stream.read_exact(&mut resp).await?;

        // ä½¿ç”¨ prost è§£ç æ¡æ‰‹å“åº” / Decode handshake response using prost
        let resp_val = HandshakeResponse::decode(resp.as_slice())?;

        if resp_val.status == "ok" {
            info!("âœ… Handshake successful / æ¡æ‰‹æˆåŠŸ");

            // åè®®åå•† / Protocol negotiation
            if !resp_val.protocol.is_empty() {
                let negotiated = negotiate_protocol(&resp_val.protocol);
                if negotiated != self.protocol {
                    info!(
                        "ğŸ”„ Protocol negotiated: {:?} -> {:?}",
                        self.protocol, negotiated
                    );
                    self.protocol = negotiated;
                }
            }
        } else {
            warn!("âš ï¸  Handshake response: {:?}", resp_val);
        }

        if !resp_val.config.is_empty() {
            let _ = self.handler.config(&resp_val.config);
            debug!("[plugin:{}] config applied from handshake", self.ident);
        }

        Ok(())
    }

    /// äº‹ä»¶å¾ªç¯ / Event loop
    async fn listen_loop(&mut self, stream: &mut UnixStream) -> Result<()> {
        loop {
            tokio::select! {
                _ = self.shutdown_rx.changed() => {
                    if *self.shutdown_rx.borrow() {
                        info!("[plugin:{}] shutdown received in listen_loop", self.ident);
                        break;
                    }
                }
                result = async {
                    // è¯»å–æ¶ˆæ¯ / Read message
                    let len = stream.read_u32().await?;
                    let mut buffer = vec![0u8; len as usize];
                    stream.read_exact(&mut buffer).await?;

                    // ä½¿ç”¨ prost è§£ç äº‹ä»¶ / Decode event using prost
                    let event = EventMessage::decode(buffer.as_slice())?;

                    debug!(
                        "[plugin:{}] event: {} (payload size: {} bytes)",
                        self.ident, event.event_type, event.payload.len()
                    );

                    // å¤„ç†äº‹ä»¶ / Handle event
                    let response = self.handler.on_event(&event)?;

                    // ä½¿ç”¨ prost ç¼–ç å“åº” / Encode response using prost
                    let resp_bytes = response.encode_to_vec();

                    // å‘é€å“åº” / Send response
                    stream.write_u32(resp_bytes.len() as u32).await?;
                    stream.write_all(&resp_bytes).await?;
                    stream.flush().await?;

                    debug!("[plugin:{}] response sent", self.ident);
                    Ok::<(), anyhow::Error>(())
                } => {
                    if let Err(e) = result {
                        return Err(e);
                    }
                }
            }
        }
        Ok(())
    }
}
