//! # Protobuf æ’ä»¶ç¤ºä¾‹ / Protobuf Plugin Example
//!
//! æ¼”ç¤ºå¦‚ä½•ä½¿ç”¨ Protocol Buffers åè®®åˆ›å»ºé«˜æ€§èƒ½æ’ä»¶
//! Demonstrates how to create high-performance plugins using Protocol Buffers
//!
//! ## æ€§èƒ½ä¼˜åŠ¿ / Performance Benefits
//! - âœ… åºåˆ—åŒ–é€Ÿåº¦æå‡ 3-10 å€ / 3-10x faster serialization
//! - âœ… æ•°æ®ä½“ç§¯å‡å°‘ 60-80% / 60-80% smaller data size
//! - âœ… ç±»å‹å®‰å…¨ / Type safety
//! - âœ… å‘åå…¼å®¹ / Backward compatibility
//!
//! ## è¿è¡Œæ–¹å¼ / How to Run
//! ```bash
//! cargo run --example plugin_protobuf_example --features protobuf -- --socket ./plugins/protobuf-demo.sock
//! ```

use anyhow::Result;
use serde_json::{json, Value};
use std::collections::HashMap;
use v::plugin::client::{PluginClient, PluginHandler};
use v::plugin::protocol::ProtocolFormat;
use v::{debug, info};

// ============================================================================
// æ’ä»¶å®ç° / Plugin Implementation
// ============================================================================

/// Protobuf æ¼”ç¤ºæ’ä»¶ / Protobuf demo plugin
struct ProtobufDemoPlugin {
    /// æ¶ˆæ¯è®¡æ•°å™¨ / Message counter
    message_count: u64,
    /// æ€§èƒ½ç»Ÿè®¡ / Performance stats
    stats: HashMap<String, u64>,
}

impl ProtobufDemoPlugin {
    fn new() -> Self {
        info!("ğŸš€ åˆå§‹åŒ– Protobuf æ¼”ç¤ºæ’ä»¶ / Initializing Protobuf demo plugin");
        Self {
            message_count: 0,
            stats: HashMap::new(),
        }
    }
}

impl PluginHandler for ProtobufDemoPlugin {
    fn name(&self) -> &'static str {
        "v.plugin.protobuf-demo"
    }

    fn version(&self) -> &'static str {
        "1.0.0"
    }

    fn capabilities(&self) -> Vec<String> {
        vec!["message".to_string(), "stats".to_string()]
    }

    fn priority(&self) -> i32 {
        500
    }

    /// æŒ‡å®šä½¿ç”¨ Protobuf åè®® / Specify Protobuf protocol
    fn protocol(&self) -> ProtocolFormat {
        #[cfg(feature = "protobuf")]
        {
            info!("âœ… ä½¿ç”¨ Protobuf åè®® / Using Protobuf protocol");
            ProtocolFormat::Protobuf
        }
        #[cfg(not(feature = "protobuf"))]
        {
            info!("âš ï¸  Protobuf æœªå¯ç”¨ï¼Œå›é€€åˆ° JSON / Protobuf not enabled, falling back to JSON");
            ProtocolFormat::Json
        }
    }

    fn on_event(&mut self, event_type: &str, payload: &Value) -> Result<Value> {
        debug!("ğŸ“¨ æ”¶åˆ°äº‹ä»¶ / Received event: {}", event_type);

        match event_type {
            "message.incoming" => {
                self.message_count += 1;
                *self.stats.entry("messages".to_string()).or_insert(0) += 1;

                let message_id = payload
                    .get("message_id")
                    .and_then(|v| v.as_str())
                    .unwrap_or("unknown");

                let from_uid = payload
                    .get("from_uid")
                    .and_then(|v| v.as_str())
                    .unwrap_or("unknown");

                info!(
                    "ğŸ’¬ å¤„ç†æ¶ˆæ¯ #{} / Processing message #{}: {} -> {}",
                    self.message_count, self.message_count, from_uid, message_id
                );

                // è¿”å›å¤„ç†ç»“æœ / Return processing result
                Ok(json!({
                    "status": "ok",
                    "flow": "continue",
                    "data": {
                        "processed": true,
                        "message_count": self.message_count,
                        "protocol": "protobuf"
                    }
                }))
            }

            "stats.get" => {
                info!("ğŸ“Š è¿”å›ç»Ÿè®¡ä¿¡æ¯ / Returning statistics");

                Ok(json!({
                    "status": "ok",
                    "flow": "continue",
                    "data": {
                        "message_count": self.message_count,
                        "stats": self.stats,
                        "protocol": "protobuf"
                    }
                }))
            }

            _ => {
                debug!("â­ï¸  æœªçŸ¥äº‹ä»¶ç±»å‹ / Unknown event type: {}", event_type);
                Ok(json!({
                    "status": "ok",
                    "flow": "continue",
                    "data": {}
                }))
            }
        }
    }
}

// ============================================================================
// ä¸»å‡½æ•° / Main Function
// ============================================================================

#[tokio::main]
async fn main() -> Result<()> {
    // åˆå§‹åŒ–æ—¥å¿— / Initialize logging
    tracing_subscriber::fmt()
        .with_env_filter(
            tracing_subscriber::EnvFilter::try_from_default_env()
                .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info")),
        )
        .init();

    info!("");
    info!("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
    info!("ğŸš€ Protobuf Plugin Demo / Protobuf æ’ä»¶æ¼”ç¤º");
    info!("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”");
    info!("");

    #[cfg(feature = "protobuf")]
    info!("âœ… Protobuf ç‰¹æ€§å·²å¯ç”¨ / Protobuf feature enabled");
    #[cfg(not(feature = "protobuf"))]
    info!("âš ï¸  Protobuf ç‰¹æ€§æœªå¯ç”¨ï¼Œå°†ä½¿ç”¨ JSON / Protobuf feature not enabled, will use JSON");

    info!("");

    // è§£æå‘½ä»¤è¡Œå‚æ•° / Parse command line arguments
    let socket_path = std::env::args()
        .nth(1)
        .unwrap_or_else(|| "./plugins/protobuf-demo.sock".to_string());

    info!("ğŸ”Œ Socket è·¯å¾„ / Socket path: {}", socket_path);
    info!("");

    // åˆ›å»ºæ’ä»¶å®ä¾‹ / Create plugin instance
    let handler = ProtobufDemoPlugin::new();

    // åˆ›å»ºå®¢æˆ·ç«¯ / Create client
    let mut client = PluginClient::new(socket_path, handler);

    info!("ğŸ¯ å¯åŠ¨æ’ä»¶å®¢æˆ·ç«¯ / Starting plugin client");
    info!("");

    // è¿è¡Œå®¢æˆ·ç«¯ / Run client
    client.run_forever_with_ctrlc().await?;

    info!("");
    info!("ğŸ‘‹ æ’ä»¶å·²åœæ­¢ / Plugin stopped");
    info!("");

    Ok(())
}
